# rustpython-lambda

./: Cargo.toml
.github/workflows/: build-rust.yml
src/: main.rs
